<resources>
    <string name="app_name">QuizKart</string>
    <string name="quiz">QUIZ</string>
    <string name="dot">.</string>
    <string name="kart">KART</string>
    <string name="quiz_kart_logo">QuizKart Logo</string>
    <string name="viewpager_text">viewpager to display screens</string>
    <string name="demo_content">Lorem ipsum dolor sit amet, consectetur\n adipiscing elit. Vivamus sodales faucibus\n dapibus. Etiam mattis leo quis laoreet dictum.</string>
    <string name="demo_title">Welcome To QuizKart</string>
    <string name="todo">TODO</string>
    <string name="picture_of_person_giving_test">Picture of person giving test</string>
    <string name="next">Next</string>
    <string name="top_icon">TOP ICON</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="signup">SignUp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="username">UserName</string>
    <string name="back_to_login">Back to Login</string>
    <string name="submit">Submit</string>
    <string name="welcome_to_QuizKart">Welcome To QuizKart</string>
    <string name="welcome_message">Welcome To QuizKart, Your Registration is Successful, You Can Go back to LoginPage and Login using your username and password, Happy Learning</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="course_content">Course Content</string>
    <string name="start_test">Course Content</string>
    <string name="test_name">Course Content</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fist_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="dummy_quiz_name">Python</string>
    <string name="dummy_about">This quiz is about blah blahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblahblah</string>
    <string name="your_score">Your Score</string>
    <string name="quiz_status">You are not attended</string>
    <string name="quiz_details">Quiz Details</string>
    <string name="name_hint">Username</string>
    <string name="slack_handle_hint">Your slack handle</string>
    <string name="track">Scholarship Track</string>
    <string name="track_android_dev">Android Developer Track</string>
    <string name="btn_submit">Submit</string>
    <string name="sign_out_title">Are you sure?</string>
    <string name="sign_out_ok">Yes</string>
    <string name="sign_out_cancel">Cancel</string>
    <string name="sign_out_message">This will sign you out from this device</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="quiz_summary_msg">Here is your score</string>
    <string name="quiz_review_confirmation">Review</string>
    <string name="user_confirmation_cancel">Cancel</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="invalid_input_provided">Invalid parameter provided while launching quiz.</string>
    <string name="quiz_submit_confirmation_title">Submit response?</string>
    <string name="quiz_submit_confirmation_msg">Are you sure you want submit your response for this quiz?</string>
    <string name="user_confirmation_yes">Yes</string>
    <string name="radio_quiz_filter_all">All</string>
    <string name="quiz_dismiss_confirmation_msg">Are you sure you want to QUIT? All your responses will be lost.</string>
    <string name="quiz_dismiss_confirmation_title">Quitting the quiz?</string>
    <string name="error_uploading_picture">Error while uploading profile picture. Please try again later.</string>
    <string name="profile_saved_successfully">Logged in successfully</string>
    <string name="create_profile">CreateProfile</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_lastname">Enter your last name</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="email_address">Email address</string>
    <string name="ok">Ok</string>
    <string name="profile">Profile</string>
    <string name="log_out">Logout</string>
    <string name="menu_achievements">Achievements</string>
    <string name="pass_msg">To Pass: 80% or higher</string>
    <string name="nocertificate">Sorry! You have not earned any certificate. Try again.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_aboutus">AboutUs</string>
    <string name="text_version">Version : 1.0</string>
    <string name="aboutapp">This app is created as a part of academic work of Skill Enhancement Course, Mobile App Development. This app aims to provide necessary technical skill-set for everyone.</string>
    <string name="description1">Let\'s Test your technical knowledge</string>
    <string name="description2">QuizKart enables you to access various quizzes across variety of Computer Science domain to enrich your skill and knowledge.</string>
    <string name="description4">Let\'s get started, enjoy your journey. All the best!!</string>
    <string name="finish">Finish</string>
    <string name="description3">For each quiz you participate in and score more than 80%, you will earn a certificate from QuizKart which you can share on the Social Media.</string>
</resources>