<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.quizkart.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_certificate"
        android:name="com.example.quizkart.ui.certificate.CertificateFragment"
        android:label="@string/menu_achievements"
        tools:layout="@layout/certificate_fragment" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.example.quizkart.ui.aboutus.AboutusFragment"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/fragment_aboutus" />
</navigation>