<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".TestDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_quizdetail"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorbg"
        app:title=" ">


        <TextView
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/quiz_details"
            android:textColor="@color/white"
            android:textSize="26sp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/colorbg"
        app:cardCornerRadius="@dimen/quiz_details_cardview_corner_radius"
        app:cardElevation="@dimen/card_view_elevation"
        app:cardMaxElevation="@dimen/card_view_elevation"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/medium_margin">


            <TextView
                android:id="@+id/quiz_details_label_quiz"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_26"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/dummy_quiz_name" />





            <ScrollView
                android:id="@+id/scrollview"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/quiz_details_scrollview_layout_height"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quiz_details_label_quiz">


                <TextView
                    android:id="@+id/quiz_details_label_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:layout_marginStart="@dimen/margin_8"
                    android:gravity="fill"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_18"
                    tools:text="@string/dummy_about" />

            </ScrollView>

            <TextView
                android:id="@+id/quiz_details_label_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/your_score"
                android:textColor="@color/blue_jeans"
                android:textSize="@dimen/text_size_26"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/quiz_details_label_status"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/quiz_details_label_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/quiz_status"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/quiz_details_fab_start"
                android:layout_width="@dimen/quiz_details_fab_layout_width"
                android:layout_height="@dimen/quiz_details_fab_layout_height"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/margin_16"
                android:clickable="true"
                android:elevation="0dp"
                android:focusable="true"
                android:src="@drawable/ic_play_arrow_black_24dp"

                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
