<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <ProgressBar
        android:id="@+id/pb_profile"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_small"
        android:backgroundTint="#FFFFFF"
        android:indeterminate="true"
        android:indeterminateTint="#1a09d6"
        android:max="100"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_profile_header_view"
        android:background="@drawable/user_profile_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_edit_profile"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_edit" />

    <ImageView
        android:id="@+id/img_user_pic"
        android:layout_width="@dimen/box_large"
        android:layout_height="@dimen/box_large"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.107"
        tools:src="@drawable/bg" />

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:hint="@string/name_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_user_pic"
        tools:text="Akshit Jain" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_scholar_info_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="32dp"
        android:elevation="6dp"
        app:cardCornerRadius="4dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Slack Handle -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ll_slack_handle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="12dp"
                android:hint="@string/slack_handle_hint"
                android:labelFor="@+id/tiet_slack_handle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_slack_handle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- Scholarship track -->
            <TextView
                android:id="@+id/label_scholarship_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_slack_handle"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:text="@string/track"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_scholarship_track"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_scholarship_track"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:enabled="false"
                android:hint="@string/track_android_dev"
                android:inputType="none"
                android:text="@string/track_android_dev"
                android:textSize="@dimen/text_regular" />

            <!-- Email -->
            <TextView
                android:id="@+id/label_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_scholarship_track"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_email_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_email"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:enabled="false"
                android:textSize="@dimen/text_regular"
                tools:text="abcxyz@gmail.com" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
